# panda_painter

./: README.md
panda_client/: cli.py  client.py  requirements.txt
panda_client/demos/: cart_poses.py  cart_traj.py  paint.py
panda_server/: CMakeLists.txt  package.xml
panda_server/launch/: panda_real.launch  panda_sim.launch
panda_server/msg/: Brush.msg  Canvas.msg  CartTrajCmd.msg  Waypoint.msg
panda_server/src/: panda_services.py
panda_server/srv/: CartPose.srv  CartTraj.srv  ChangeCollisionBehavior.srv  Grasp.srv  GripperPos.srv  JointPos.srv  KDLCartTraj.srv  ScaleLimits.srv  SetCanvas.srv  SetWorkspace.srv
