<?xml version="1.0"?>
<package format="2">
  <name>panda_server</name>
  <version>1.0.0</version>
  <description>The panda_server package</description>

  <maintainer email="kelleherjdaniel@gmail.com">dan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>panda_moveit_config</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf_conversions</depend>
  <depend>kdl_conversions</depend>
  <depend>eigen_conversions</depend>

</package>
